--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/profile_image"
         android:layout_marginLeft="5dp"
+        android:maxEms="10"
         android:text="hello"
         android:id="@+id/show_message"
         android:textSize="18sp"
