--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -23,6 +23,7 @@
             android:layout_alignParentEnd="true"
             android:background="@drawable/background_right"
             android:padding="8dp"
+            android:maxEms="10"
             android:text="hello"
             android:textColor="#fff"
             android:textSize="18sp" />
