--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/profile_image"
         android:layout_marginLeft="5dp"
-        android:maxEms="10"
+        android:maxEms="8"
         android:text="hello"
         android:id="@+id/show_message"
         android:textSize="18sp"
@@ -25,10 +25,11 @@
         android:id="@+id/chatroomtimetxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/profile_image"
+        android:layout_alignBottom="@id/show_message"
         android:layout_marginEnd="1dp"
         android:layout_toRightOf="@id/show_message"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textAlignment="viewStart" />
 
 
 </RelativeLayout>
