--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -13,11 +13,36 @@
         android:layout_height="?actionBarSize"
         android:layout_alignParentTop="true"
         android:background="#F8CCAE">
-        <TextView
-            android:id="@+id/username"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="TextView" />
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_toEndOf="@+id/back_bt"
+                android:gravity="center"
+                android:text="TextView"
+                android:textColor="#000000"
+                android:textSize="28sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/back_bt"
+                android:layout_width="?actionBarSize"
+                android:layout_height="?actionBarSize"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/ic_chevron_left_black_24dp"
+                android:onClick="back"/>
+            <Button
+                android:layout_width="?actionBarSize"
+                android:layout_height="?actionBarSize"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/ic_more_vert_black_24dp"/>
+        </RelativeLayout>
+
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -25,8 +50,7 @@
         android:layout_height="match_parent"
         android:id="@+id/display_msg"
         android:layout_above="@+id/send_panel"
-        android:layout_below="@+id/appBarLayout">
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_below="@+id/appBarLayout"/>
     <RelativeLayout
         android:id="@+id/send_panel"
         android:layout_width="match_parent"
@@ -44,11 +68,12 @@
 
         <ImageButton
             android:id="@+id/send"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_send_black_24dp"
+            android:layout_width="?actionBarSize"
+            android:layout_height="?actionBarSize"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:background="#00FFFFFF"
+            android:src="@drawable/ic_send_black_24dp" />
         <EditText
         android:id="@+id/send_Text"
         android:layout_width="match_parent"
