--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -9,17 +9,19 @@
         android:layout_height="40dp"
         android:id="@+id/profile_image"
         android:src="@drawable/ic_account_circle_black_24dp"/>
+
     <TextView
+        android:id="@+id/show_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/profile_image"
         android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@id/profile_image"
+        android:background="@drawable/background_left"
         android:maxEms="8"
-        android:text="hello"
-        android:id="@+id/show_message"
-        android:textSize="18sp"
         android:padding="8dp"
-        android:background="@drawable/background_left"/>
+        android:text="hello"
+        android:textColor="#000000"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/chatroomtimetxt"
