--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -22,10 +22,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:background="@drawable/background_right"
-            android:padding="8dp"
             android:maxEms="10"
+            android:padding="8dp"
             android:text="hello"
-            android:textColor="#fff"
+            android:textColor="#000000"
             android:textSize="18sp" />
 
         <TextView
