更新英文版

--- a/app/src/main/res/layout/activity_add_goods.xml
+++ b/app/src/main/res/layout/activity_add_goods.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="新增餐點或食材"
+                android:text="@string/addFood"
                 android:textSize="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:ems="10"
-                    android:hint="品名"
+                    android:hint="@string/itemName"
                     android:inputType="textPersonName" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:ems="10"
-                    android:hint="簡介"
+                    android:hint="@string/brief"
                     android:inputType="textPersonName" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -94,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:ems="10"
-                    android:hint="剩餘時間"
+                    android:hint="@string/remTime"
                     android:inputType="textPersonName" />
             </com.google.android.material.textfield.TextInputLayout>
             <RelativeLayout
@@ -117,7 +117,7 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="right"
                         android:ems="10"
-                        android:hint="地址"
+                        android:hint="@string/add"
                         android:inputType="textPostalAddress" />
                 </com.google.android.material.textfield.TextInputLayout>
                 <Button
@@ -127,11 +127,12 @@
                     android:layout_alignParentRight="true"
                     android:background="@drawable/ic_edit_location_black_24dp" />
             </RelativeLayout>
+
             <Switch
                 android:id="@+id/chip2"
                 android:layout_width="240dp"
                 android:layout_height="wrap_content"
-                android:text="是否有費用"
+                android:text="@string/charge"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/panel4" />
@@ -151,7 +152,7 @@
                     android:layout_gravity="center"
                     android:ems="10"
                     android:enabled="false"
-                    android:hint="費用"
+                    android:hint="@string/price"
                     android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -161,7 +162,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="submit_goods"
-                android:text="新增"
+                android:text="@string/aDD"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.25"
                 app:layout_constraintStart_toStartOf="parent"
@@ -171,7 +172,7 @@
                 android:id="@+id/cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="取消"
+                android:text="@string/cancel"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.75"
                 app:layout_constraintStart_toStartOf="parent"
@@ -181,7 +182,7 @@
                 android:id="@+id/switch1"
                 android:layout_width="240dp"
                 android:layout_height="wrap_content"
-                android:text="是否以商家身分上架"
+                android:text="@string/avail"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/panel5" />
