--- a/app/src/main/res/layout/activity_businregist_page.xml
+++ b/app/src/main/res/layout/activity_businregist_page.xml
@@ -13,7 +13,7 @@
         android:layout_height="?actionBarSize"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="商家註冊"
+        android:text="@string/newShop"
         android:textColor="#F8CBAD"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +42,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="店名"
+                android:hint="@string/shopName"
                 android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -65,7 +65,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="地址"
+                android:hint="@string/add"
                 android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -88,7 +88,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="連絡電話(市話需含區域碼)"
+                android:hint="@string/telWithArea"
                 android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
