--- a/app/src/main/res/layout/activity_goods_view.xml
+++ b/app/src/main/res/layout/activity_goods_view.xml
@@ -46,7 +46,7 @@
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="排隊取餐"
+                android:text="@string/order"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -71,7 +71,7 @@
                 android:id="@+id/good_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="品名"
+                android:text="@string/itemName"
                 android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
                 android:id="@+id/last_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="剩餘時間："
+                android:text="@string/remTime"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +108,7 @@
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="上傳者："
+                android:text="@string/uploader"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -134,7 +134,7 @@
                 android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="費用："
+                android:text="@string/price"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -160,7 +160,7 @@
                 android:id="@+id/good_distribution"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="簡介："
+                android:text="@string/brief"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -178,7 +178,7 @@
                 android:enabled="false"
                 android:gravity="top"
                 android:inputType="textPersonName"
-                android:text="簡介內容"
+                android:text="@string/desc"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/good_distribution"
                 app:layout_constraintTop_toBottomOf="@+id/good_distribution" />
@@ -187,7 +187,7 @@
                 android:id="@+id/address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="地址："
+                android:text="@string/add"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -205,7 +205,7 @@
                 android:enabled="false"
                 android:gravity="top"
                 android:inputType="textPersonName"
-                android:text="地址"
+                android:text="@string/add"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/address" />
