--- a/app/src/main/res/layout/fragment_page4.xml
+++ b/app/src/main/res/layout/fragment_page4.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#00FFFFFF"
-        android:text="更改語言"
+        android:text="@string/chgLan"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
         android:layout_height="50dp"
         android:background="#00FFFFFF"
         android:onClick="ChangeInfo"
-        android:text="修改個人資料"
+        android:text="@string/chgInfo"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,12 +64,13 @@
         app:layout_constraintBottom_toTopOf="@+id/button11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/button11"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#00FFFFFF"
-        android:text="版本資訊"
+        android:text="@string/version"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/button10"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +91,7 @@
         android:layout_height="50dp"
         android:background="#00FFFFFF"
         android:onClick="logout"
-        android:text="登出"
+        android:text="@string/logOut"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
