--- a/app/src/main/res/layout/activity_personnel_info.xml
+++ b/app/src/main/res/layout/activity_personnel_info.xml
@@ -11,13 +11,13 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="修改個人資訊"
+        android:text="@string/chgInfo"
         android:textColor="#F8CBAD"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.08" />
 
     <LinearLayout
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:gravity="top"
-            android:text="真實姓名："
+            android:text="@string/rName"
             android:textColor="#C55A11"
             android:textSize="18sp" />
 
@@ -49,7 +49,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:gravity="top"
-            android:text="名字"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -65,84 +64,94 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.0">
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/L1"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/L1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/nickname"
+            android:textColorHint="#C55A11"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/nickname"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="暱稱"
-                android:textColorHint="#C55A11"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/nickname"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="match_parent" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/L2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="原來密碼"
+            android:hint="@string/oriPwd"
             android:textColorHint="#C55A11"
-            app:passwordToggleEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pwdChg">
+            app:layout_constraintTop_toBottomOf="@+id/pwdChg"
+            app:passwordToggleEnabled="true">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/oripwd"
-                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:enabled="false"/>
+                android:enabled="false"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <Switch
             android:id="@+id/pwdChg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="更改密碼"
+            android:text="@string/chgPwd"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/L1"
-            app:layout_constraintRight_toRightOf="parent"/>
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/L3"
+            app:layout_constraintTop_toBottomOf="@+id/L1" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/L3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/newPwd"
+            android:textColorHint="#C55A11"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/L2"
+            app:passwordToggleEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/newpwd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="新密碼"
-                android:textColorHint="#C55A11"
-                app:passwordToggleEnabled="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/L2">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/newpwd"
-                    android:inputType="textPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"/>
-            </com.google.android.material.textfield.TextInputLayout>
+                android:enabled="false"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/L4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="確認密碼"
+            android:hint="@string/conPwd"
             android:textColorHint="#C55A11"
-            app:passwordToggleEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/L3">
+            app:layout_constraintTop_toBottomOf="@id/L3"
+            app:passwordToggleEnabled="true">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/conpwd"
-                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:enabled="false"/>
+                android:enabled="false"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/L5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="居住地址"
+            android:hint="@string/rAdd"
             android:textColorHint="#C55A11"
             app:layout_constraintTop_toBottomOf="@+id/L4">
 
@@ -151,38 +160,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFeatureSettings="15dp"
             android:onClick="updateInfo"
-            android:text="確認修改"
+            android:text="@string/conChg"
             app:layout_constraintBottom_toBottomOf="@+id/button4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/button4"
             app:layout_constraintTop_toBottomOf="@+id/L6"
             app:layout_constraintVertical_bias="1.0" />
+
         <Button
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="goBack"
-            android:text="返回"
+            android:text="@string/back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/L6"
             app:layout_constraintVertical_bias="0.0" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/L6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="聯絡電話"
+            android:hint="@string/tel"
             android:textColorHint="#C55A11"
             app:layout_constraintTop_toBottomOf="@+id/L5">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tel"
                 android:layout_width="match_parent"
