--- a/app/src/main/res/layout/goods_item.xml
+++ b/app/src/main/res/layout/goods_item.xml
@@ -19,10 +19,10 @@
         android:id="@+id/good_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/profile_image"
-        android:layout_toEndOf="@id/profile_image"
         android:layout_marginLeft="10dp"
-        android:text="品名"
+        android:layout_toEndOf="@id/profile_image"
+        android:layout_toRightOf="@+id/profile_image"
+        android:text="@string/itemName"
         android:textSize="28sp" />
 
     <TextView
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="10dp"
-        android:text="剩餘時間"
+        android:text="@string/remTime"
         android:textAlignment="textEnd"
         android:textSize="15sp" />
 
@@ -44,7 +44,7 @@
         android:layout_alignEnd="@id/username"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/profile_image"
-        android:text="描述"
+        android:text="@string/desc"
         android:textSize="18sp" />
 
     <TextView
@@ -53,21 +53,22 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:text="上傳者"
+        android:paddingBottom="10dp"
+        android:text="@string/uploader"
         android:textAlignment="textEnd"
-        android:textSize="15sp"
-        android:paddingBottom="10dp" />
+        android:textSize="15sp" />
+
     <TextView
         android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/profile_image"
         android:layout_alignParentBottom="true"
-        android:text="種類"
         android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/profile_image"
+        android:paddingBottom="10dp"
+        android:text="@string/type"
         android:textAlignment="textEnd"
-        android:textSize="15sp"
-        android:paddingBottom="10dp"/>
+        android:textSize="15sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
