--- a/app/src/main/res/layout/activity_add_goods.xml
+++ b/app/src/main/res/layout/activity_add_goods.xml
@@ -204,7 +204,7 @@
                 android:id="@+id/switch2"
                 android:layout_width="240dp"
                 android:layout_height="wrap_content"
-                android:text="是否要經過pos 系統"
+                android:text="@string/pos"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/switch1" />
