--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -47,7 +47,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/display_msg"
         android:layout_above="@+id/send_panel"
         android:layout_below="@+id/appBarLayout"/>
@@ -74,11 +74,12 @@
             android:layout_centerVertical="true"
             android:background="#00FFFFFF"
             android:src="@drawable/ic_send_black_24dp" />
+
         <EditText
-        android:id="@+id/send_Text"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:layout_toStartOf="@+id/send" />
+            android:id="@+id/send_Text"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:layout_toStartOf="@+id/send" />
     </RelativeLayout>
 
 
